--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -61,8 +61,9 @@ jobs:
     steps:
       - run:
           name: smoke test
-          command:  return 1
-      - destroy_environment
+          command: |
+            return 1
+      - destroy_environment  
 
 # Sequential workflow
 workflows:
