--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -31,8 +31,8 @@ jobs:
               --region us-east-1
       # Fail the job intentionally to simulate an error.
       # Uncomment the line below if you want to fail the current step
-      # - run: return 1
-      # - destroy_environment
+       - run: return 1
+       - destroy_environment
 
   # Exercise: Config and Deployment
   # configure_infrastructure: 
