--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,7 +16,7 @@ orbs:
 #           command: |
 #             aws cloudformation delete-stack --stack-name myStack-${CIRCLE_WORKFLOW_ID:0:5}
 #   # Define the jobs we want to run for this project
-# jobs:
+jobs:
 #   create_infrastructure: 
 #     docker:
 #       - image: amazon/aws-cli
